  handler is ask to print for violated constraint a reason;
- the parameter list of the method scip_check() (objconshdlr.h) has an additional parameter "printreason" 
  see for explanation the previous point
- new method SCIPgetVectorEfficacyNorm()
- new method SCIPcutGenerationHeuristicCmir() in sepa_cmir.h
- new method SCIPseparateRelaxedKnapsack() in cons_knapsack.h

features:
- the MPS reader is now able to write a problem in MPS format
- new method SCIPwriteOrigProblem(), e.g., 
  SCIPwriteOrigProblem(scip, "orig.lp", FALSE) prints the original problem in LP format in the file "orig.lp"
- new method SCIPwriteTransProblem(), e.g.,
  SCIPwriteOrigProblem(scip, NULL, FALSE) displays the transformed problem in CIP format 
- new method SCIPgetProbvarLinearSum()
- added SOS2 example
- extended TSP example
- the ZIMPL reader now understands SOS type 1 and 2 constraints
- the LP reader reads SOS constraints of type 1 and 2
- the MPS reader reads the SOS section (but cannot yet handle 'MARKERS')
- output of real values is now done with 15 digits after the decimal point
- new method SCIPgetResultantAnd() which returns the resultant variable of an "and" constraint 
- SCIP is now able to count all feasible solutions of a given CIP (SCIPcount() in cons_countsols.h)
- SCIP can now output a picture of the constraint matrix in PPM format.
- replaced some old sorting methods in cons_knapsack.c, heur_octane.c, sepa_flowcover.c and presol_probing.c through SCIPsort... interfaces, adjusted misc.{c,h} and pub_misc.h for these changes
- updated mmm.{test,solu}, mittelmann.{test,solu}, miplib3.solu, miplib.solu, shortmiplib.test and added mittelmann_current.test, mittelmann_old.test 
- LPI now has a function SCIPlpiGetSolverPointer() that returns a solver dependent pointer. This can be used to directly access the LP solver. 
  This should, of course, only be used by people that know exactly what they are doing.